# ChangeLog for app-admin/logstalgia
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/logstalgia/ChangeLog,v 1.2 2013/04/09 07:12:46 pinkbyte Exp $

*logstalgia-1.0.3-r1 (09 Apr 2013)

  09 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> -logstalgia-1.0.3.ebuild,
  +logstalgia-1.0.3-r1.ebuild:
  Revbump, adding subslot operator for media-libs/libpng dependency

*logstalgia-1.0.3 (07 Dec 2012)

  07 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> +logstalgia-1.0.3.ebuild,
  +metadata.xml:
  Initial import from sunrise with my fixes, wrt bug #242414. Thanks to
  everyone, who worked on this ebuild
