@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST logstalgia-1.0.3.tar.gz 841822 SHA256 d3338a9fffb9b60ecb90986c81f27a09a18fa8627b5b884a79c70fee7f6461eb SHA512 ca7b0fbb3341d6561a980e1daa42e20a4f307a794c96f02a3530e5b9d8ae19ae1d9acce127bf0aad59547f1cff3e5a6425ae3558c973f67b9d68c4151e31679b WHIRLPOOL 0729b4919c418670a99d2023acfaeafba4ad653796d22827cb5c6b4271183706b6c77c0ba638b53535c8c24786fef5989b8b2c7e78db62aeadc7a76c407c5cc5
+DIST logstalgia-1.0.6.tar.gz 902147 SHA256 a81b94742cce64b0b2d1b1683f2f7ac6d06456056f353896153b1b8181855f34 SHA512 9b264c65e412efc7cc8ae9a3b53c71bb769b52dfa759c7e9f84b41e55363b803bc776379658eab2c7975000766c26879f8bc3b33e436224113ae15c9846676a1 WHIRLPOOL 2797514fa648cbcd0516927a9c7a255997c5018f8d40b37207ffb4b21b67ff4aaf797d53b3bf8d94e9d8c749fe79706acdc70682e422a318f8a94c6bd13f752b
 EBUILD logstalgia-1.0.3-r1.ebuild 725 SHA256 234c10758d2c9ebcd40d5e9110289132a33a5d343abc5abf5d6286c3655b950c SHA512 b22612f85ef15571441f26a4a4564dcd4695e2c0998db57b96a57ade34d8c4eaa5b019c1a01190ff6d52a9089a16ed45d4e7f94db1bbca6277a798299864c35d WHIRLPOOL 85be18695a2da8f95b7489601e830a91036a7d027a01294fcbf5697a6d74011bfa87df365be1020ac4371fb70bfc10e39324ac985790db6af178c96f606c7bb3
-MISC ChangeLog 664 SHA256 bb6a5d256cde888e9ca285647b27af3a23b481fb531e1315b46e3101a1c94f10 SHA512 cbbbffbec3b753ad6a687c44e83f20062899de6bbea00fc455539072fbc23ac2e81eaa4dc9e99bea59fbcc57a9874ff94efb5ebe3f4532bc56131426c07f900c WHIRLPOOL 3480efe823865bdbf5cef006e51d4c15e48efa46b6f10a0d6aff65859c2fc08f41e5b03294844a7d9110af47d7c121ca14f8f535336bab29b2a7dac57dffbf3b
+EBUILD logstalgia-1.0.6.ebuild 856 SHA256 4c3232f59f5c981b46652b9b7cad7dcdac6b4ad4341de2ff6e2f3080c67e2f17 SHA512 13bee3ebffed299a16d7ec6c6de52c98476d3a6b9a2cfd547d0b28214fc64811866a9624d4b3806f6050e2e6f33dbca2f3fe3d1c892787a09dda95b0b6192734 WHIRLPOOL 93f8a2ed55ad0b58c2aa48b87b1177ba26158f95971cb711c4512450a4f313d724fa203d7fdfac73da53c8c3028d6be121fe48bf86684f82aa4a6242cb791334
+MISC ChangeLog 889 SHA256 85649680e99fb4ad554452dd93bfc974c4e43ff29215e2a76a4e5fb9de43b395 SHA512 c0da3ad6fa5b8d1fee056c6854e4af45afb71cb2e72ebbfb050b8d142ca4d12cf60bd3ddd3b314f046207dee3dc5c5169adb580d23ecc22901b29a196d966149 WHIRLPOOL 92dd47cc7c74979f31767eff5955335d0b7b569f03d13fe82a74aa9b5daf743ab0aabf3e646e2684b5b3509150f8604724f2d5e2ef73a6f85d03650e13e429a8
 MISC metadata.xml 313 SHA256 eca001576944c9f7b054a09da04cdf4b11b82b12ce373173cb739f6a5915d41d SHA512 eb7bbf8461cc359b0df7ea33d90a33efd380af47716ade061b94f8f2acebfe8b60c1753aba7df987a56ea7eeb61af344e79ed87c55049c7682af2b3dd1c043fa WHIRLPOOL e2948ff02da7cdd850f40db0089411ac2cd6df2a5d787a4f8b818f32f8c09076791c32332653ac138c485b5b61febf6c41de1c819a5ce94b79b6655046bd2bdd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJRY79dAAoJECo/aRed9267YEwIAL5Tkw5TV+YpesXhH1Mh/e2c
-foLgfDef8wlsYDAM53CY4SwoLg6ZdcEXKiP57j+6JA759VxurHQ8p2Id8ckCKiB+
-grPzBEnctIbMBVUqGNxTyg+MbnZ06tqsYemsPVdeHwJ/6DBJL9ks8BxE23TkfsCa
-PGZpDOJKS3woN9d02laI7Z1fpzkJnyR4NWYpg441ZxPBSrWgyvIWMg8FRjCdFvrq
-kT40omMiSQGU3ch8zM7NTlT6xlJ7r5dzLGtDwWGIZUZ/WHkBFm5veyuWF1jqfS9M
-/ov48KPhrHs6F1EYaaIdXZNLcoo3WkpK1kMS7zB8HB3O4nhMd8/EJ9o0xxAqKWI=
-=rAlY
+iQEcBAEBCAAGBQJVOMTeAAoJECo/aRed9267OQIH/3BzKiw8LrKFhE1acqth1qMO
+2V37sYHqGWFZ2e/4g1tDLbeFnXrtykeJCo+UxDDpjO6lWSj1fkrjE+duuavtHCvI
+qzaiIX11dzuJG7stiW4YDfalMSGrCp1R4Q1VwoJCdjJMzsk/6/IbQVVipNfoOPaH
+JIM3UjplGrEHx0R8QGJIGRDhnleyL1zqdk3Z1MBsmiJNo6LIbZoCL1HCctElnr6I
+XDudgPJDRFC5boyyRRDeChBqD+sGpPCu3sLi3IWev/Doi786b+3NeTmOpqQ1bQGP
+WHF4yrlFn5NU/Dtamy851WL1g6PynRIy63vWJdMwty+JlzX9XFdxwfNAtf9SKco=
+=gokg
 -----END PGP SIGNATURE-----
