@@ -1,0 +1,12 @@
+DEFINED_PHASES=prepare
+DEPEND=dev-libs/boost media-libs/glm virtual/pkgconfig
+DESCRIPTION=Replays or streams an access_log as a retro arcade game-like simulation
+EAPI=5
+HOMEPAGE=http://code.google.com/p/logstalgia/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=dev-libs/libpcre media-libs/freetype:2 media-libs/glew:0= media-libs/libsdl2[opengl,threads] media-libs/libpng:0= media-libs/sdl2-image[jpeg,png] virtual/glu virtual/opengl
+SLOT=0
+SRC_URI=https://github.com/acaudwell/Logstalgia/releases/download/logstalgia-1.0.6/logstalgia-1.0.6.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=904cd5dc7b5c3eb78d51ce892f5bbf0d
